--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        # TODO: readd windows-latest and check 4 files in run_tests
+        os: [ubuntu-latest, macos-latest]
     steps:
       - name: clone repo
         uses: actions/checkout@v2.0.0
