--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       - name: install deno
         uses: denolib/setup-deno@v1.2.0
       - name: run tests
-        if: matrix.os != "windows-latest"
+        if: matrix.os != 'windows-latest'
         run: |
           deno --allow-env --allow-read --allow-write ./main.ts ./da/plug
           (ls \
