--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,6 @@
 name: ci
 
-on: [push, pull_request, release]
+on: push
 
 jobs:
   test:
@@ -10,19 +10,27 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
     steps:
-      - name: clone repo
-        uses: actions/checkout@v2.0.0
-      - name: install deno
-        uses: denolib/setup-deno@v1.2.0
-      - name: run tests
-        if: matrix.os != 'windows-latest'
+      - uses: actions/checkout@v2.0.0
+      - uses: denolib/setup-deno@v1.2.0
+        with:
+          deno-version: 0.41.0
+      - name: run the tool
+        run: deno --allow-env --allow-read --allow-write ./main.ts ./da/plug
+      - name: run a check on unix
+        if: startsWith(matrix.os, 'win') == false
         run: |
-          deno --allow-env --allow-read --allow-write ./main.ts ./da/plug
           (ls \
             ./da/plug/.gitignore \
             ./da/plug/Cargo.toml \
             ./da/plug/src/lib.rs \
-            ./da/plug/lib.ts && \
+            ./da/plug/mod.ts && \
           exit 0) \
           || \
           exit 1
+      - name: run a check on windows
+        if: startsWith(matrix.os, 'win')
+        run: |
+          if not exist ./da/plug/.gitignore exit 1
+          if not exist ./da/plug/Cargo.toml exit 1
+          if not exist ./da/plug/src/lib.rs exit 1
+          if not exist ./da/plug/mod.ts exit 1
