--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
     steps:
       - uses: actions/checkout@v2.0.0
-      - uses: denolib/setup-deno@v1.2.0
+      - uses: denolib/setup-deno@master
         with:
           deno-version: 0.41.0
       - name: run the tool
