fix: deno install opts incx pipeline pt2

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
             --allow-read \
             --allow-write \
             --root=/usr/local/bin \
-            create-deno-plugin \
+            --name=create-deno-plugin \
             ./main.ts
           create-deno-plugin --async ./demo
           cd ./demo
